examples/ill-formed/scheme/general/MismatchedType.scheme
import 'examples/ill-formed/fixtures/EmptyPrimitive.primitive';

Scheme MismatchedType(Bool x) extends EmptyPrimitive {
    Int y = x;
}
